Making PythonInterpreter a singleton and updating huggingface to match